# Vanta-Deep-Research-API

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  architecture-2.md  architecture.md  cli.py  get_or_models.py  pyproject.toml  requirements.txt  tasks.md  test_api.py
.github/workflows/: ci.yml
api/: app.py
api/middleware/: audit_log.py  auth.py
api/routes/: health.py  reports.py  research.py  sources.py  webhooks.py
api/static/: index.html
core/: config.py  logging.py
core/llm/: __init__.py  client.py  types.py
core/plugins/: base.py  registry.py
core/queue/: __init__.py  tasks.py  worker.py
core/research/: __init__.py  engine.py  extractor.py  memory.py  planner.py  state.py  synthesizer.py
core/security/: __init__.py  api_keys.py  encryption.py
core/webhooks/: dispatcher.py  signing.py
db/: engine.py  session.py
db/migrations/: env.py
db/models/: __init__.py  api_key.py  audit_log.py  claim.py  llm_backend.py  org.py  report.py  research_job.py  source.py  usage_record.py  webhook.py
deploy/: .gitkeep  Caddyfile  Dockerfile  docker-compose.yml
deploy/searxng/: settings.yml
examples/: deep-research-platform.html  deep-research-premium.html  third-party-client.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
integrations/: fetcher.py  searxng.py
scripts/: migrate.py  reset_db.py  seed.py
tests/e2e/: test_smoke.py
tests/integration/: test_api_routes.py  test_research_submit.py  test_transient_backend.py
tests/unit/: test_all_tables.py  test_api_keys.py  (+19 more)
(+27 files in other folders)
