[project]
name = "deep-research-api"
version = "0.1.0"
requires-python = ">=3.11"
description = "Self-hosted, privacy-first research-as-a-service API"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis==5.0.4",
    "arq==0.25.0",
    "httpx==0.27.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "cryptography==42.0.7",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-httpx==0.30.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.2.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pgvector>=0.4.2",
    "playwright>=1.60.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = []
